--- a/packages/today-ui/src/tooltip/style/tooltip.less
+++ b/packages/today-ui/src/tooltip/style/tooltip.less
@@ -2,9 +2,10 @@
   display: unset;
 }
 .t-tooltip-content {
+    padding: 4px;
     position: absolute;
     border: 1px solid #ddd;
     border-radius: 4px;
-    background: #999;
+    background: #666;
     color: white;
 }
