--- a/packages/today-ui/src/tooltip/style/tooltip.less
+++ b/packages/today-ui/src/tooltip/style/tooltip.less
@@ -9,3 +9,10 @@
     background: #666;
     color: white;
 }
+.t-tooltip-arrow {
+  position: absolute;
+  background: #666;
+  width: 8px;
+  height: 8px;
+  transform: rotate(45deg);
+}
