--- a/src/dropdown/dropdown.css
+++ b/src/dropdown/dropdown.css
@@ -26,6 +26,7 @@
   width: max-content;
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
   outline: 0;
+  position: fixed;
 }
 
 .MenuItem {
