--- a/src/dropdown/dropdown.css
+++ b/src/dropdown/dropdown.css
@@ -2,19 +2,17 @@
   --highlighted: royalblue;
   --active-unfocused: #d7dce5;
 }
-
-.RootMenu {
+.t-dropdown-ref.trigger-wrap {
   padding: 6px 14px;
   border: none;
   font-size: 16px;
   background: none;
   border-radius: 6px;
   border: 1px solid var(--active-unfocused);
-}
-
-.RootMenu[data-open],
-.RootMenu:hover {
-  background: var(--active-unfocused);
+  &[data-open],
+  &:hover {
+    background: var(--active-unfocused);
+  }
 }
 
 :root .t-dropdown-menu {
@@ -26,41 +24,35 @@
   width: max-content;
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
   outline: 0;
-  position: fixed;
-}
-
-.MenuItem {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: none;
-  width: max-content;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  text-align: left;
-  line-height: 1.8;
-  min-width: 110px;
-  margin: 0;
-  outline: 0;
-}
-
-.MenuItem:hover {
-  background: var(--highlighted);
-  color: white;
-  cursor: pointer;
-}
-
-.MenuItem:focus {
-  background: var(--highlighted);
-  color: white;
-}
-
-.MenuItem[data-nested][data-open]:not([data-focus-inside]) {
-  background: var(--highlighted);
-  color: white;
-}
-
-.MenuItem[data-focus-inside][data-open] {
-  background: var(--active-unfocused);
+  &-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: none;
+    width: max-content;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    text-align: left;
+    line-height: 1.8;
+    min-width: 110px;
+    margin: 0;
+    outline: 0;
+    &:hover {
+      background: var(--highlighted);
+      color: white;
+      cursor: pointer;
+    }
+    &:focus {
+      background: var(--highlighted);
+      color: white;
+    }
+    &[data-nested][data-open]:not([data-focus-inside]) {
+      background: var(--highlighted);
+      color: white;
+    }
+    &[data-focus-inside][data-open] {
+      background: var(--active-unfocused);
+    }
+  }
 }
