--- a/src/dialog/style.less
+++ b/src/dialog/style.less
@@ -2,21 +2,84 @@
   border: 1px solid #999;
   display: grid;
   grid-template-rows: 32px 1fr 32px;
+  inset: 0px;
+  padding: 24px;
+  margin: auto;
+  border-style: solid;
+  overflow: unset;
+  border-width: 1px;
+  border-top-color: var(--colorTransparentStroke);
+  border-right-color: var(--colorTransparentStroke);
+  border-bottom-color: var(--colorTransparentStroke);
+  border-left-color: var(--colorTransparentStroke);
+  border-bottom-right-radius: var(--borderRadiusXLarge);
+  border-bottom-left-radius: var(--borderRadiusXLarge);
+  border-top-right-radius: var(--borderRadiusXLarge);
+  border-top-left-radius: var(--borderRadiusXLarge);
+  display: block;
+  user-select: unset;
+  visibility: unset;
+  position: fixed;
+  height: fit-content;
+  max-width: 600px;
+  max-height: 100vh;
+  box-sizing: border-box;
+  background-color: var(--colorNeutralBackground1);
+  color: var(--colorNeutralForeground1);
 
-  .header {
-    height: 32px;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    font-size: 20px;
+  &-body {
+    overflow: unset;
+    gap: 8px;
+    display: grid;
+    max-height: calc(100vh - 48px);
+    box-sizing: border-box;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr 1fr auto;
   }
 
-  .footer {
+  .header {
+    // height: 32px;
+    // display: flex;
+    // align-items: center;
+    // padding: 0 16px;
+    // font-size: 20px;
+    font-family: var(--fontFamilyBase);
+    font-size: var(--fontSizeBase500);
+    font-weight: var(--fontWeightSemibold);
+    line-height: var(--lineHeightBase500);
+    margin: 0px;
+    grid-area: 1 / 1 / 1 / 3;
+  }
+
+  .content {
+    padding-top: var(--strokeWidthThick);
+    padding-right: var(--strokeWidthThick);
+    padding-bottom: var(--strokeWidthThick);
+    padding-left: var(--strokeWidthThick);
+    margin-top: calc(var(--strokeWidthThick) * -1);
+    margin-right: calc(var(--strokeWidthThick) * -1);
+    margin-bottom: calc(var(--strokeWidthThick) * -1);
+    margin-left: calc(var(--strokeWidthThick) * -1);
+    font-family: var(--fontFamilyBase);
+    font-size: var(--fontSizeBase300);
+    font-weight: var(--fontWeightRegular);
+    line-height: var(--lineHeightBase300);
+    overflow-y: auto;
+    min-height: 32px;
+    box-sizing: border-box;
+    grid-area: 2 / 1 / 2 / 4;
+  }
+
+
+  .actions {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    justify-self: end;
+    gap: 8px;
+    height: fit-content;
+    box-sizing: border-box;
     display: flex;
-    padding: 0 16px;
-    height: 32px;
-    align-items: center;
-    justify-content: flex-end;
+    grid-row: 3 / 3;
   }
 }
 
